deploy/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kuard.tomas.website
    secretName: kuard.tomas.website.secret
  rules:
  - host: kuard.tomas.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
