deploy/mynode-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
  namespace: nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: mynode-app-nginx
  tls:
    - hosts:
      - helloworld.tomas.website
      secretName: letsencrypt-prod
  rules:
    - host: helloworld.tomas.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mynode-app
                port:
                  number: 80
